// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellContainerSelectOption should render default settings correctly 1`] = `
<TouchableOpacity
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 4,
      "padding": 16,
      "position": "relative",
    }
  }
  testID="cell-container-select-option-base"
>
  <View />
</TouchableOpacity>
`;

exports[`CellContainerSelectOption should render the proper select state when isSelected is true 1`] = `
<TouchableOpacity
  style={
    Object {
      "backgroundColor": "#037DD619",
      "borderRadius": 4,
      "padding": 16,
      "position": "relative",
    }
  }
  testID="cell-container-select-option-base"
>
  <View />
  <View
    style={
      Object {
        "backgroundColor": "#037DD6",
        "borderRadius": 2,
        "bottom": 4,
        "left": 4,
        "position": "absolute",
        "top": 4,
        "width": 4,
      }
    }
  />
</TouchableOpacity>
`;
